@@ -1,0 +1,101 @@
+﻿/* #FH  //z 2015-06-11 12:52:48 L.203'40032 BG57IV3@XCL T2732778100.K.F2514898295----+----+----+
++  0.FileInfo: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+        File : E:\MyDoc\GitHub\ZNginx\Doc\Bike\Tool.cs.F2514898295----+----+----+----+----+----+
+       Motto : No one can make you feel inferior without your consent.+----+----+----+----+----+
+       Motto : The death of fear is in doing what you fear to do.+----+----+----+----+----+----+
+       Motto : It's hard to beat a person who never gives up.----+----+----+----+----+----+----+
+       Motto : Take what you do seriously. Not yourself.----+----+----+----+----+----+----+----+
+       Motto : Life begins where your comfort zone ends.----+----+----+----+----+----+----+----+
+       Motto : To know and not do, is not yet to know.-+----+----+----+----+----+----+----+----+
+       Motto : The more you do , the more you can do.--+----+----+----+----+----+----+----+----+
+       Motto : Do what you do best, better.--+----+----+----+----+----+----+----+----+----+----+
+       Motto : Get Your Hands Dirty.----+----+----+----+----+----+----+----+----+----+----+----+
+      Author : 126.org@gmail.com (R) Kaizen (->30,T5,M&M,W)-+----+----+----+----+----+----+----+
+
++  1.ID & Desc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  2.Req & Repro: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  3.Folder & File: +----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  4.Cause & Solution: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  5.Todo & Done: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  6.Commit: --+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  7.Issue: ---+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  8.Summary: -+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
++  9.Misc: ----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+----+
+
+***********************************************************************************************/
+
+#region 06-11 12:52 R#.0    @Ver.Info
+       Zey_S : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+		R#
+       Zey_E : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+       Zcl_S : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+       Zcl_E : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     Zndex_S : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     Zndex_E : //z 2015-06-11 13:10:35 L.203'38965 T4019430475.K ~13  +----+----+----+----+----+
+     TimeCnt : //z 2015-06-11 12:52:52 L.203'40028 T2732778127.K ~1   +----+----+----+----+----+
+     Reg.Cnt : //z 2015-06-11 12:52:50 L.203'40030 T2732778125.K ~1   +----+----+----+----+----+
+     #1   R+ : //z 2015-06-11 12:52:50 L.203'40030 T2732778125.K ~1     V+.3    L+.62   
+     File.Op : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     Version : //z 2015-06-11 13:10:35 L.203'38965 T4019430475.K ~14    R+.1    L+.82   --+----+
+     #0   R+ : //z 2015-06-11 12:52:50 L.203'40030 T2732778125.K ~3     R+.1    L+.63   V+.3    
+     K   Ter : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K  Mers : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K Kersi : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     KVersio : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K Versi : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K  Vers : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K   Ver : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K    Ve : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     K     V : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+     KaizenZ : //z 2015-06-11 12:52:48 L.203'40032 T2732778100.K ~0   +----+----+----+----+----+
+#endregion //z 2015-06-11 12:52:48 L.203'40032 BG57IV3@XCL T2732778100.K.F2514898295-+----+----+
+
+#region 06-11 12:52 R#.1    @自行车扳手
+//z 2015-06-11 12:52:52 L.203'40028 T2732778127.K[T1,L62,R1,V4]
+01. 
+变速系统用2.5、3、4、5
+刹车用6
+牙盘和停车支撑用8
+
+8号
+10号
+12号
+13号
+14号
+15号
+17号
+梅花扳手或开口扳手、是维修自行车常用扳手。
+
+修自行车，尽量不用活络扳手。最好用套管扳手 。其次是梅花扳手。这样对螺母损害小。
+推荐 8-10 12-14 13-15 14-17 双头梅花扳手一套。双头开口扳手一套。内六角扳手一套（拧车把用）。基本就够用了。
+备用一个10寸活络扳手，一把管钳。钳子 螺丝刀数把。
+
+1.活动扳手或开口扳手：一般五金店便可购得，开口扳手使用上较方便，但是购买时须注意一般自行车所用的多为公制螺栓；而有一支活动扳手，在许多工作上是必须的。
+2.内六角扳手：一般五金行均可购得，注意一般使用的均为公制。
+3.螺丝起子：有一字与十字两种，五金行即可购得。
+4.拆胎杆：拆卸外胎时使用，可在车店购得。
+5.补胎胶与补胎片：补胎用，可在车店购得。
+6.打链器：拆卸链条使用。
+7.钢丝扳手：调整轮圈钢丝张力用。
+8.润滑油：虽不是工具的一种，但是是维护自行车时所必备的，要准备黄油、链条油、及一般滑润油三种。
+9.特殊工具（非必要，但有最好）
+10.套筒扳手：使用于拆卸曲柄的固定螺栓，一般为14mm或15mm的。
+11.曲柄拆卸器：用于拆卸曲柄或大齿盘。
+12.链条扳手：将飞轮的链轮分解使用。
+13.飞轮拆卸器：将飞轮拆下使用，不同厂牌的飞轮须用不同的拆卸器。
+14.花鼓扳手：为薄片状的开口扳手，用来分解花鼓轴及轴承，一般为13mm至16mm。
+15.前叉碗扳手：薄片状的开口扳手，用于装卸调整前叉碗，依前叉碗的尺寸不同而有不同。
+16.橡胶锤：用来敲击卡住的零件，使其松脱。
+17.剪线钳：钳口呈圆弧形，剪内线时才不会散开。
+18.BB工具组：用来拆卸调整中天心，依不同形式的中天心而有不同形式。
+19.工作台：用于将自行车架起，以便进行维修工作。
+20.调轮架：调整轮圈钢丝张力使用。 
+#endregion //z 2015-06-11 12:52:50 L.203'40030 BG57IV3@XCL T2732778125.K.F2514898295-+----+----+
